# nitrc

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  source_env.sh
ci/: generate_requirements.py
explorations/: main.py  test.py
explorations/entry_1/: test.py
explorations/entry_2/: cmi_hbn.py  ibib_pan.py
explorations/entry_3/: cmi_hbn.py  ibib_pan.py  test.py
explorations/entry_4/: main.py
explorations/entry_5/: main.py  test.py
explorations/entry_6/: main.py  test.py
explorations/models/: ltv.py
explorations/tests/: filter_test.py  graph_test.py  ica_test.py  stft_test.py
explorations/utils/: data_utils.py  model_utils.py  visualization_utils.py
research/: config.py  test.py
research/entry_1/: main.py  test.py
research/entry_2/: convert_to_csv.py  ibib_pan.py  main.py
research/entry_2_5/: main.py
research/entry_3/: cmi_hbn.py  ibib_pan.py  test.py
research/entry_4/: main.py
research/entry_5/: main.py  test.py
research/entry_5_1/: main.py  test.py
research/entry_6/: main.py
research/models/: encoder_decoder.py  linear_dynamics.py  ltv.py
research/scripts/: filter_test.py  ica_test.py  linear_test.py  ltv_delay_resting.py  ltv_non_resting.py  ltv_resting.py  stft_bands.py  stft_bands_non_resting.py  stft_bands_resting.py  stft_dynamics.py  stft_non_resting.py  stft_resting.py  stft_stats.py  stft_test.py
research/tests/: filter_test.py  graph_test.py  ica_test.py  ltv_test.py  stft_bands_regional_test.py  stft_test.py
research/utils/: data_utils.py  visualization_utils.py
scripts/: ibib_pan.py  ica.py  lanzhou.py  launch_notebooks.sh  untar.sh
src/dataloaders/: cmi_hbn.py  dataset.py  ibib_pan.py  lanzhou.py
src/models/: ltv.py
src/tests/: filter.py  intrastate_traj.py  ltv.py  ltv_grid.py  pca_by_group.py
src/utils/: config.py  pca.py  (+1 more)
(+15 files in other folders)
